--- a/css/main.css
+++ b/css/main.css
@@ -299,7 +299,7 @@ header#main-header .navbar-brand {
   text-align: left;
   text-transform: uppercase;
 }
-#banner2 .requisito .col-md-6 ul div.icon {
+#banner2 .requisito .col-md-6 ul .icon {
   background: url('../sources/images/iconos.png') -420px -93px;
   background-repeat: no-repeat;
   width: 5%;
@@ -360,7 +360,25 @@ header#main-header .navbar-brand {
 }
 #estrenar h2 {
   font-size: 35px;
-  padding: 30px 0;
+  padding: 30px 0 60px 0;
   text-transform: uppercase;
   font-weight: 600;
+}
+#estrenar .list-estrenar ul .icon {
+  background: url('../sources/images/iconos.png') -452px -95px;
+  background-repeat: no-repeat;
+  width: 4%;
+  height: 20px;
+  display: inline-block;
+  padding-right: 30px;
+  vertical-align: top;
+}
+#estrenar .list-estrenar ul li {
+  padding-right: 30px;
+  display: inline-block;
+  width: 90%;
+  margin-bottom: 5px;
+  font-weight: 400;
+  font-size: 15px;
+  padding-bottom: 30px;
 }
