--- a/sources/less/main.less
+++ b/sources/less/main.less
@@ -243,7 +243,7 @@ header#main-header {
           text-align: left;
           text-transform: uppercase;
         }
-        div.icon{
+        .icon{
           background: url('../sources/images/iconos.png') -420px -93px;
           background-repeat: no-repeat;
           width: 5%;
@@ -311,8 +311,29 @@ header#main-header {
   color: white;
   h2{
     font-size: 35px;
-    padding: 30px 0;
+    padding: 30px 0 60px 0;
     text-transform: uppercase;
     font-weight: 600;
+  }
+  .list-estrenar{
+    ul{
+      .icon{
+        background: url('../sources/images/iconos.png') -452px -95px;
+        background-repeat: no-repeat;
+        width: 4%;
+        height: 20px;
+        display: inline-block;
+        padding-right: 30px;
+        vertical-align: top;
+      }
+      li{
+        padding-right: 30px;
+        display: inline-block; width: 90%;
+        margin-bottom: 5px;
+        font-weight: 400;
+        font-size: 15px;
+        padding-bottom: 30px;
+      }
+    }
   }
 }
