--- a/css/main.css
+++ b/css/main.css
@@ -382,3 +382,18 @@ header#main-header .navbar-brand {
   font-size: 15px;
   padding-bottom: 30px;
 }
+#remate h2 {
+  font-size: 45px;
+  color: #0B2340;
+  padding: 80px 0;
+}
+#remate button {
+  width: 50%;
+  padding: 10px 0;
+  background: #009FCB;
+  color: white;
+  font-weight: 400;
+  font-size: 26px;
+  margin-bottom: 100px;
+  border-radius: 5px;
+}
