--- a/sources/less/main.less
+++ b/sources/less/main.less
@@ -337,3 +337,21 @@ header#main-header {
     }
   }
 }
+
+#remate{
+  h2{
+    font-size: 45px;
+    color: @DarkBlue;
+    padding: 80px 0;
+  }
+  button{
+    width: 50%;
+    padding: 10px 0;
+    background: @lightBlue;
+    color: white;
+    font-weight: 400;
+    font-size: 26px;
+    margin-bottom: 100px;
+    border-radius: 5px;
+  }
+}
